<resources>
    <string-array name="casts_array">
        <item>Choisir …</item>
        <item>Ouvrière</item>
        <item>Mâle</item>
        <item>Gyne</item>
    </string-array>
    <string-array name="subfamily_array">
        <item>Choisir …</item>
        <item>Dolichoderinae</item>
        <item>Formicinae</item>
        <item>Myrmicinae</item>
        <item>Ponerinae</item>
    </string-array>
    <string name="app_name">Ants Identifier</string>
    <string name="title_information">Informations</string>
    <string name="title_search">Rechercher</string>
    <string name="title_history">Historique</string>
    <string name="information_antarium_title">Antarium</string>
    <string name="information_antarium_description">Cette application délivrée par la communauté d’<b>Antarium</b>, n’a en aucun cas prétention à l’exactitude, son utilisation doit toujours être accompagnée de recherches extérieures. \n\nN’hésitez pas à faire un retour sur le <b>serveur Discord.</b></string>
    <string name="antarium_logo_alt">Logo d\'Antarium</string>
    <string name="information_ressources_title">Ressources</string>
    <string name="information_ressources_description">Les photographies proviennent soient de <b>Antweb.org</b> soient de la communauté.\n\nLes espèces considérées sont notamment celles présentes dans la liste dressée par l’association <b>AntArea</b> (antarea.org), en excluant certaines espèces invasives uniquement présentes dans les bâtiments chauffés.</string>
    <string name="information_application_description">Vous pouvez retrouver le code de l’application sur <b>Github</b> et ainsi participer à son développement.</string>
    <string name="information_application_title">Application</string>
    <string name="information_discord_title">Rejoindre le serveur Discord</string>
    <string name="information_discord_description">https://discord.gg/antariums</string>
    <string name="search_welcome">Bienvenue dans l’outil de recherche <b>Antarium</b> précisez votre recherche petit à petit et une fois que vous vous retrouvez bloqué utilisez la clé d’identification correspondante.</string>
    <string name="search_cast_title">Castes</string>
    <string name="search_cast_button">Clé d’identification des castes</string>
    <string name="search_subfamily_button">Clé d’identification des sous-famille</string>
    <string name="search_subfamily_title">Sous-famille</string>
</resources>